# emacs-config

./: .gitignore  init.el
project-skeletons/basic-cpp/: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
project-skeletons/basic-cpp-lib/: CMakeLists.txt
scripts/: transparent_window.py
snippets/c++-mode/: make_unique  unique_ptr
snippets/latex-mode/: bcolumns  bfigureimage  bframe  bimage  bitemize  btikzellipse  btikznode  btikzpicture
snippets/org-mode/: code_block
